--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         }
         /* Fondo de imagen */
         body {
-            background-image: url('fondo.png'); /* Cambia 'fondo.jpg' por tu imagen */
+            background-image: url('Fondo.png'); /* Cambia 'fondo.jpg' por tu imagen */
             background-size: cover;
             background-position: center;
         }
